basic banner logic in place -- using scroll marquee due to spacing issues

--- a/app/styles/modules/_main-navigation.scss
+++ b/app/styles/modules/_main-navigation.scss
@@ -261,6 +261,58 @@ div[dmc-top-header]{
   }
 }
 
+.header-banner{
+  padding: 5px 0px;
+  max-width: 1200px;
+  max-width: 80%;
+  margin: auto;
+}
+
+.header-marquee{
+  overflow: hidden;
+  position: relative;
+  height: 44px;
+  p {
+    color: red;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 44px;
+    text-align: center;
+    /* Starting position */
+    -moz-transform:translateX(100%);
+    -webkit-transform:translateX(100%);
+    transform:translateX(100%);
+    /* Apply animation to this element */
+    -moz-animation: scroll-left 8s linear infinite;
+    -webkit-animation: scroll-left 8s linear infinite;
+    animation: scroll-left 8s linear infinite;
+  }
+  /* Move it (define the animation) */
+  @-moz-keyframes scroll-left {
+    0%   { -moz-transform: translateX(100%); }
+    100% { -moz-transform: translateX(-100%); }
+  }
+  @-webkit-keyframes scroll-left {
+    0%   { -webkit-transform: translateX(100%); }
+    100% { -webkit-transform: translateX(-100%); }
+  }
+  @keyframes scroll-left {
+    0%   {
+      -moz-transform: translateX(100%); /* Browser bug fix */
+      -webkit-transform: translateX(100%); /* Browser bug fix */
+      transform: translateX(100%);
+    }
+    100% {
+      -moz-transform: translateX(-100%); /* Browser bug fix */
+      -webkit-transform: translateX(-100%); /* Browser bug fix */
+      transform: translateX(-100%);
+    }
+  }
+}
+
+
 .header-menu-content.md-default-theme{
   a.md-button {
     line-height: 3.2;
